fixed load spinner on mobile viewports

--- a/app/components/CellWithLoadSpinner/cell-with-load-spinner.css
+++ b/app/components/CellWithLoadSpinner/cell-with-load-spinner.css
@@ -9,8 +9,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 270px;
-  height: 270px;
+  width: 100%;
+  aspect-ratio: 1;
 }
 
 .load-spinner {
